--- a/Stadis.Intelligence.Web/Views/Shared/_LayoutWithNoCss.cshtml
+++ b/Stadis.Intelligence.Web/Views/Shared/_LayoutWithNoCss.cshtml
@@ -56,12 +56,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpcuViSxzlScwOBZy5ln5iIvRl9TYn4y0&libraries=drawing,visualization"></script>
-    <script src="~/Reveal/infragistics.reveal.js" asp-append-version="true"></script>
+    <!--script src="~/Reveal/infragistics.reveal.js" asp-append-version="true"></script-->
+    <script src="https://dl.revealbi.io/reveal/libs/1.5.0/infragistics.reveal.js"></script>
     <!-- END: Revel infragistic-->
     @await RenderSectionAsync("Scripts", required: false)
 
-<script type="text/javascript">
+    <script type="text/javascript">
 
-</script>
+    </script>
 </body>
 </html>
